test/classes/delete-free/tests-from-design-overview/borrowed-arguments.good
borrowed-arguments.chpl:12: In function 'saveit':
borrowed-arguments.chpl:14: warning: 'delete' can only be applied to unmanaged classes
borrowed-arguments.chpl:13: error: Scoped variable global would outlive the value it is set to
borrowed-arguments.chpl:12: note: consider scope of arg
